--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
+        <jmh.version>1.37</jmh.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,18 @@
             <groupId>org.pitest</groupId>
             <artifactId>pitest-junit5-plugin</artifactId>
             <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -73,6 +86,11 @@
                 <version>3.5.4</version>
             </plugin>
             <plugin>
+                <groupId>pw.krejci</groupId>
+                <artifactId>jmh-maven-plugin</artifactId>
+                <version>0.2.2</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.1</version>
@@ -81,24 +99,23 @@
                         <arg>-Alog4j.graalvm.groupId=${project.groupId}</arg>
                         <arg>-Alog4j.graalvm.artifactId=${project.artifactId}</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.openjdk.jmh</groupId>
+                            <artifactId>jmh-generator-annprocess</artifactId>
+                            <version>${jmh.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-core</artifactId>
+                        </path>
+                    </annotationProcessorPaths>
+                    <annotationProcessors>
+                        <processor>org.openjdk.jmh.generators.BenchmarkProcessor</processor>
+                        <processor>org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor</processor>
+                        <processor>org.apache.logging.log4j.core.config.plugins.processor.GraalVmProcessor</processor>
+                    </annotationProcessors>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <configuration>
-                            <annotationProcessorPaths>
-                                <path>
-                                    <groupId>org.apache.logging.log4j</groupId>
-                                    <artifactId>log4j-core</artifactId>
-                                </path>
-                            </annotationProcessorPaths>
-                            <annotationProcessors>
-                                <processor>org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor</processor>
-                                <processor>org.apache.logging.log4j.core.config.plugins.processor.GraalVmProcessor</processor>
-                            </annotationProcessors>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
