--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>more-log4j2</name>
@@ -12,8 +12,8 @@
     <url>https://github.com/mlangc/more-log4j2</url>
 
     <scm>
-        <url>https://github.com/mlangc/more-log4j2</url>
-        <developerConnection>git@github.com:mlangc/more-log4j2.git</developerConnection>
+        <url>scm:git:https://github.com/mlangc/more-log4j2</url>
+        <developerConnection>scm:git:git@github.com:mlangc/more-log4j2.git</developerConnection>
     </scm>
 
     <developers>
@@ -278,6 +278,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.1.1</version>
             </plugin>
         </plugins>
     </build>
