--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.1.1</version>
+                <configuration>
+                    <completionGoals>deploy</completionGoals>
+                </configuration>
             </plugin>
         </plugins>
     </build>
