--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>more-log4j2</name>
@@ -14,7 +12,8 @@
     <scm>
         <url>scm:git:https://github.com/mlangc/more-log4j2</url>
         <developerConnection>scm:git:git@github.com:mlangc/more-log4j2.git</developerConnection>
-    </scm>
+      <tag>more-log4j2-1.1.0</tag>
+  </scm>
 
     <developers>
         <developer>
