--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <name>more-log4j2</name>
@@ -12,7 +12,7 @@
     <scm>
         <url>scm:git:https://github.com/mlangc/more-log4j2</url>
         <developerConnection>scm:git:git@github.com:mlangc/more-log4j2.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>more-log4j2-1.2.0</tag>
   </scm>
 
     <developers>
