--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
 
     <modules>
+		<module>parent</module>
         <module>core</module>
         <module>junit</module>
     </modules>
