--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2-parent</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0</version>
     <packaging>pom</packaging>
 
     <name>more-log4j2-parent</name>
@@ -16,7 +14,7 @@
     <scm>
         <url>scm:git:https://github.com/mlangc/more-log4j2</url>
         <developerConnection>scm:git:git@github.com:mlangc/more-log4j2.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>more-log4j2-bom-2.1.0</tag>
     </scm>
 
     <developers>
