--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
     <artifactId>more-log4j2-bom</artifactId>
     <packaging>pom</packaging>
 
+    <scm>
+        <url>scm:git:https://github.com/mlangc/more-log4j2</url>
+        <developerConnection>scm:git:git@github.com:mlangc/more-log4j2.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <modules>
 		<module>parent</module>
         <module>core</module>
