--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2-parent</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>more-log4j2-parent</name>
@@ -322,6 +322,18 @@
                     <configuration>
                         <completionGoals>deploy</completionGoals>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>io.github.mavenplugins</groupId>
+                    <artifactId>unleash-maven-plugin</artifactId>
+                    <version>3.3.3</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>io.github.mavenplugins</groupId>
+                            <artifactId>unleash-scm-provider-git</artifactId>
+                            <version>3.3.1</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
