--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.mlangc</groupId>
         <artifactId>more-log4j2-parent</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.1.0</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
