--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -11,6 +11,7 @@
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
+    <name>more-log4j2-junit</name>
     <artifactId>more-log4j2-junit</artifactId>
     <packaging>jar</packaging>
     <description>Helpers for junit</description>
