--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.mlangc</groupId>
         <artifactId>more-log4j2-parent</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
