--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.mlangc</groupId>
     <artifactId>more-log4j2-parent</artifactId>
-    <version>2.1.0</version>
+    <version>2.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>more-log4j2-parent</name>
